--- a/src/main/resources/public/airplanes.html
+++ b/src/main/resources/public/airplanes.html
@@ -12,8 +12,7 @@
             crossorigin="anonymous"></script>
 
     <!-- Bootstrap 4 -->
-    <link rel="stylesheet" href="/css/bootstrap-minty.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- DataTables -->
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
@@ -21,8 +20,7 @@
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
 
-
-    <script src="/js/airports.js"></script>
+    <script src="/js/airplanes.js"></script>
 </head>
 <body>
 <div class="container mt-5">
