--- a/src/main/resources/public/airplanes.html
+++ b/src/main/resources/public/airplanes.html
@@ -19,11 +19,24 @@
     <!-- Font Awesome -->
     <script src="https://use.fontawesome.com/cb275ec490.js"></script>
 
+    <!-- Bootbox -->
+    <script src="/js/bootbox.js"></script>
+
+
     <!-- DataTables -->
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css">
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+
+    <!-- Toastr -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+    <!-- Toastr Config -->
+    <script src="/js/toastr.js"></script>
+    <script src="/js/bootbox.min.js"></script>
+    <script src="/js/underscore-min.js"></script>
 
     <script src="/js/airplanes.js"></script>
 </head>
@@ -49,10 +62,17 @@
     </div>
 </nav>
 
-
 <div class="container mt-5">
     <div class="row">
-        <!--button-->
+        <button type="button" class="btn btn-primary" id="create">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+        </button>
+        <button type="button" class="btn btn-primary controls" id="edit" disabled>
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+        </button>
+        <button type="button" class="btn btn-danger controls" id="remove" disabled>
+            <i class="fa fa-trash" aria-hidden="true"></i>
+        </button>
     </div>
     <div class="row">
         <div class="col">
@@ -61,10 +81,43 @@
                 <tr>
                     <th>Name</th>
                     <th>Gas</th>
-                    <!--<th>Current airport</th>-->
+                    <th>Current airport</th>
                 </tr>
                 </thead>
             </table>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="airplaneModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add an airplane</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="airplaneForm">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input id="name" class="form-control" name="name" type="text" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="gas">Gas</label>
+                        <input id="gas" class="form-control" name="gas" type="text" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="airportId">Gas</label>
+                        <input id="airportId" class="form-control" name="airportId" type="text" required>
+                    </div>
+                    <input type="submit" id="airplaneSubmit" style="display: none;">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="$('#airplaneSubmit').click();">Submit</button>
+            </div>
         </div>
     </div>
 </div>
