--- a/src/main/resources/public/airports.html
+++ b/src/main/resources/public/airports.html
@@ -19,11 +19,23 @@
     <!-- Font Awesome -->
     <script src="https://use.fontawesome.com/cb275ec490.js"></script>
 
+    <!-- Bootbox -->
+    <script src="/js/bootbox.js"></script>
+
     <!-- DataTables -->
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css">
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+
+    <!-- Toastr -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+    <!-- Toastr Config -->
+    <script src="/js/toastr.js"></script>
+    <script src="/js/bootbox.min.js"></script>
+    <script src="/js/underscore-min.js"></script>
 
     <script src="/js/airports.js"></script>
 </head>
@@ -50,7 +62,15 @@
 </nav>
 <div class="container mt-5">
     <div class="row">
-        <!--button-->
+        <button type="button" class="btn btn-primary" id="create">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+        </button>
+        <button type="button" class="btn btn-primary controls" id="edit" disabled>
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+        </button>
+        <button type="button" class="btn btn-danger controls" id="remove" disabled>
+            <i class="fa fa-trash" aria-hidden="true"></i>
+        </button>
     </div>
     <div class="row">
         <div class="col">
@@ -59,10 +79,39 @@
                 <tr>
                     <th>Id</th>
                     <th>Location</th>
-                    <!--<th>Current airport</th>-->
+                    <!--<th>airplanes</th>-->
                 </tr>
                 </thead>
             </table>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="airportModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add an airport</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="airportForm">
+                    <div class="form-group">
+                        <label for="location">Location</label>
+                        <input id="location" class="form-control" name="location" type="text" required>
+                    </div>
+                    <!--<div class="form-group">-->
+                        <!--<label for="airportId">Gas</label>-->
+                        <!--<input id="airportId" class="form-control" name="airportId" type="text" required>-->
+                    <!--</div>-->
+                    <input type="submit" id="airportSubmit" style="display: none;">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="$('#airportSubmit').click();">Submit</button>
+            </div>
         </div>
     </div>
 </div>
